--- a/07-rock-paper-scissors.html
+++ b/07-rock-paper-scissors.html
@@ -8,7 +8,7 @@
 <body>
   <p>Rock Paper Scissors</p>
   <button onclick="
-  pickComputerMove();
+  const computerMove =  pickComputerMove();
 
   let result = '';
 
@@ -25,7 +25,7 @@
 
 
   <button onclick="
-  pickComputerMove();
+  const computerMove = pickComputerMove(); 
 
   let result = '';
 
@@ -42,7 +42,7 @@
 
 
   <button onclick="
-  pickComputerMove();
+  const computerMove = pickComputerMove();
 
   let result = '';
 
@@ -57,9 +57,9 @@
   alert(`You picked scissors. Computer picked ${computerMove}. ${result}`)
   ">Scissors</button>
   <script>
-    let computerMove = '';
     function pickComputerMove() {
       const randomNumber = Math.random();
+      let computerMove = '';
       if (randomNumber >= 0 && randomNumber < 1 / 3) {
         computerMove = 'rock';
       } else if (randomNumber >= 1 / 3 && randomNumber < 2 / 3) {
@@ -67,6 +67,9 @@
       } else if (randomNumber >= 2 / 3 && randomNumber < 1) {
         computerMove = 'Scissors';
       }
+
+      return computerMove;
+
     }
   </script>
 </body>
