--- a/07-functions.html
+++ b/07-functions.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>fucntions</title>
+  <title>functions</title>
 </head>
 
 <body>
@@ -17,7 +17,11 @@
     function1(); 
     */
 
-    
+    function calculateTax(cost, taxPercent = 0.1) {
+      console.log(cost * taxPercent);
+    }
+    calculateTax(2000, 0.2);
+    calculateTax(5000);
   </script>
 </body>
 
