--- a/09-rock-paper-scissor.html
+++ b/09-rock-paper-scissor.html
@@ -8,26 +8,51 @@
 <body>
   <p>Rock Paper Scissors</p>
   <button onclick="
-  const computerMove =  pickComputerMove();
-
   playGame('Rock');
-
   ">Rock</button>
 
 
   <button onclick="
-  const computerMove = pickComputerMove(); 
-
-  playGame('Paper');
+   playGame('Paper');
   ">Paper</button>
 
 
   <button onclick="
-  const computerMove = pickComputerMove();
   playGame('Scissors');
   ">Scissors</button>
 
+  <p class="js-result"></p>
+  <p class="js-moves"></p>
+  <p class="js-score"></p>
+
+
+  <button onclick="
+  score.wins = 0;
+  score.losses = 0;
+  score.ties = 0;
+  localStorage.removeItem('score');
+  updateScoreElement();
+  ">Reset Score</button>
+
   <script>
+
+    let score = JSON.parse(localStorage.getItem('score')) || {
+      wins: 0,
+      losses: 0,
+      ties: 0
+    };
+
+    updateScoreElement();
+    /*
+        if (!score) {
+         score = {
+          wins: 0,
+          losses: 0,
+          ties: 0
+      }
+        }
+        */
+
     function pickComputerMove() {
       const randomNumber = Math.random();
       let computerMove = '';
@@ -65,7 +90,6 @@
           result = 'You lose.';
         }
 
-
       } else if (playerMove === 'Rock') {
 
         if (computerMove === 'Rock') {
@@ -77,8 +101,26 @@
         }
 
       }
-      alert(`You picked ${playerMove}. Computer picked ${computerMove}. ${result}`)
 
+      document.querySelector('.js-result').innerHTML = result;
+      document.querySelector('.js-moves').innerHTML = `You ${playerMove} - ${computerMove} Computer`
+
+      if (result === 'You win.') {
+        score.wins++;
+      } else if (result === 'You lose.') {
+        score.losses++;
+      } else if (result === 'Tie.') {
+        score.ties++;
+      }
+
+      localStorage.setItem('score', JSON.stringify(score));
+
+      updateScoreElement();
+
+    }
+
+    function updateScoreElement() {
+      document.querySelector('.js-score').innerHTML = `Wins: ${score.wins}, Losses: ${score.losses}, Ties: ${score.ties}`;
     }
 
   </script>
